ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rundeck-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:4dc0-a399-ea68d7e64ac7
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: rundeck-prod.internal.trailways.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rundeck-service
                port:
                  number: 4443
  tls:
    - hosts:
        - rundeck-prod.internal.trailways.com
      secretName: rundeck-tls-secret
